--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - deploy
 
 workflow:
   rules:
@@ -21,4 +22,20 @@ build:
     - DESTINATION_ARG="--destination $IMAGE:$CI_COMMIT_REF_SLUG"
     - if [ "$CI_COMMIT_BRANCH" == "master" ]; then DESTINATION_ARG="$DESTINATION_ARG --destination $IMAGE:latest" ; fi
     - if [ -n "$CI_COMMIT_TAG" ]; then DESTINATION_ARG="$DESTINATION_ARG --destination $IMAGE:$CI_COMMIT_TAG" ; fi
-    - /kaniko/executor --registry-mirror $DOCKER_REGISTRY_MIRROR --dockerfile $CI_PROJECT_DIR/Dockerfile --context $CI_PROJECT_DIR --cache $DESTINATION_ARG
+    - /kaniko/executor --registry-mirror $DOCKER_REGISTRY_MIRROR --dockerfile $CI_PROJECT_DIR/Dockerfile --context $CI_PROJECT_DIR --cache $DESTINATION_ARG --image-name-tag-with-digest-file $CI_PROJECT_DIR/image-id
+  artifacts:
+    name: image-id
+    paths:
+      - image-id
+
+deploy:
+  rules:
+    - if: $CI_COMMIT_BRANCH == 'master'
+    - if: $CI_COMMIT_TAG
+  stage: deploy
+  image:
+    name: docker.io/bitnami/kubectl:latest
+    entrypoint: [""]
+  script:
+    - kubectl set image deploy/lbkeyper lbkeyper=$(cat image-id)
+    - kubectl rollout status deploy/lbkeyper
