ci: fix deploy command
image-id contains multiple entries if kaniko is pushing to multiple
targets. We do this for example on the master branch, where we push
both to :latest as well as :master.

We select only on image id by just using the last entry in the file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,5 +37,5 @@ deploy:
     name: docker.io/bitnami/kubectl:latest
     entrypoint: [""]
   script:
-    - kubectl set image deploy/lbkeyper lbkeyper=$(cat image-id)
+    - kubectl set image deploy/lbkeyper lbkeyper=$(tail -n1 image-id)
     - kubectl rollout status deploy/lbkeyper
