--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,21 +8,18 @@ workflow:
     - if: $CI_COMMIT_BRANCH == 'master'
     - if: $CI_COMMIT_TAG
 
+
+variables:
+  IMAGE: $LINBIT_DOCKER_REGISTRY/lbkeyper
+
 build:
-  variables:
-    IMAGE: $LINBIT_DOCKER_REGISTRY/lbkeyper
   stage: build
-  image:
-    name: gcr.io/kaniko-project/executor:debug
-    entrypoint: [ "" ]
+  image: ${LINBIT_DOCKER_REGISTRY}/container-tools:latest
   script:
-    - set -ex
-    - mkdir -p /kaniko/.docker
-    - ln -snf "$DOCKER_AUTH_CONFIG_FILE" /kaniko/.docker/config.json
-    - DESTINATION_ARG="--destination $IMAGE:$CI_COMMIT_REF_SLUG"
-    - if [ "$CI_COMMIT_BRANCH" == "master" ]; then DESTINATION_ARG="$DESTINATION_ARG --destination $IMAGE:latest" ; fi
-    - if [ -n "$CI_COMMIT_TAG" ]; then DESTINATION_ARG="$DESTINATION_ARG --destination $IMAGE:$CI_COMMIT_TAG" ; fi
-    - /kaniko/executor --registry-mirror $DOCKER_REGISTRY_MIRROR --dockerfile $CI_PROJECT_DIR/Dockerfile --context $CI_PROJECT_DIR --cache $DESTINATION_ARG --image-name-tag-with-digest-file $CI_PROJECT_DIR/image-id
+    - DESTINATION_ARG="-t $IMAGE:$CI_COMMIT_REF_SLUG"
+    - if [ "$CI_COMMIT_BRANCH" == "master" ]; then DESTINATION_ARG="$DESTINATION_ARG -t $IMAGE:latest" ; fi
+    - if [ -n "$CI_COMMIT_TAG" ]; then DESTINATION_ARG="$DESTINATION_ARG -t $IMAGE:$CI_COMMIT_TAG" ; fi
+    - docker buildx build --pull --push . --iidfile=image-id $DESTINATION_ARG
   artifacts:
     name: image-id
     paths:
@@ -37,5 +34,5 @@ deploy:
     name: docker.io/bitnami/kubectl:latest
     entrypoint: [""]
   script:
-    - kubectl set image deploy/lbkeyper lbkeyper=$(tail -n1 image-id)
+    - kubectl set image deploy/lbkeyper lbkeyper=$IMAGE@$(cat image-id)
     - kubectl rollout status deploy/lbkeyper
